src/dts/tests/nested_modules/nested_modules.exp
Error: nested_modules.js:6
  6: var a : string = P.a;
                      ^^^ number. This type is incompatible with
  6: var a : string = P.a;
             ^^^^^^ string

Error: nested_modules.js:8
  8: var x : string = cc.y;
                      ^^^^ number. This type is incompatible with
  8: var x : string = cc.y;
             ^^^^^^ string

Error: nested_modules.js:9
  9: var two : string = F.successor(1);
                        ^^^^^^^^^^^^^^ number. This type is incompatible with
  9: var two : string = F.successor(1);
               ^^^^^^ string

Error: nested_modules.js:10
 10: var alias_two : typeof two = T.identity(two);
                                  ^^^^^^^^^^^^^^^ C. This type is incompatible with
 10: var alias_two : typeof two = T.identity(two);
                     ^^^^^^^^^^ string

Error: nested_modules.js:10
 10: var alias_two : typeof two = T.identity(two);
                                  ^^^^^^^^^^^^^^^ number. This type is incompatible with
 10: var alias_two : typeof two = T.identity(two);
                     ^^^^^^^^^^ string

Error: nested_modules.js:11
 11: var z : string = M.N.z;
                      ^^^^^ number. This type is incompatible with
 11: var z : string = M.N.z;
             ^^^^^^ string


Found 6 errors
